Add title label